--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <style type="text/CSS">
-
-<body>
-<h2 style='text-align: center; color: red'>Commandes non-payées</h2>
+<head> 
+    <title>
+        des tests
+    </title>
+</head>
+<body style='background-color: blue; '>
+<h2 style='text-align: center; '>Commandes non-payées</h2>
 
 
 
@@ -40,5 +43,5 @@
 
 		</table>
         </body>
-        </style>		
+        		
 <html/>		
