--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 <body style='background-color: rgb(169, 191, 252); '>
 <h2 style='text-align: center; '>Commandes non-payées</h2>
 
- <p>mes tests du github</p>
+ <p style='text-align: center; border-color: blue; '>mes tests du github </p>
+
+ <br/>
+ <p>mes tests du github 2 </p>
 
 <br/>
 
