--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 							<h2>La gestion de l'entreprise EJ SARL<br />
 							comment gérer une Application ?</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>Nous lançons une Session de Formation Accélérée en Informatique.
+							Veuillez passer dans notre Local au 130/A Boulevard du 30 juin, immeuble SANASH Référence Immeuble Congo Airways, pour confirmer votre inscription et bénéficier d'une formation professionnelle.
+							Contactez-nous   : +243 815 250 190 (Appel et Whatsapp) .</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
